--- a/src/css/style.css
+++ b/src/css/style.css
@@ -32,3 +32,59 @@
   *::after {
     box-sizing: inherit;
   }
+
+  body {
+    font-family: 'Lato';
+    font-style: normal;
+    font-size: 16px;
+    line-height: 1.2;
+    font-weight: normal;
+    color: #102746;
+  }
+
+  .wrapper {
+    max-width: 1060px;
+    margin: 0 auto;
+  }
+
+  .header {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    background-color: #000;
+  }
+
+  .header__wrapper {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: flex-end;
+    justify-content: space-between;
+    padding-top: 56px;
+  }
+
+  .header__list {
+    display: flex;
+    flex-wrap: wrap;
+  }
+
+  .header__item {
+    margin-right: 82px;
+  }
+
+  .header__item:last-child {
+    margin-right: 0;
+  }
+
+  .header__link {
+    font-size: 18px;
+    font-weight: 24px;
+    color: white;
+    text-decoration: none;
+  }
+
+  .header__link:hover,
+  .header__link:focus,
+  .header__link:active {
+    opacity: 0.75;
+  }
