--- a/src/css/style.css
+++ b/src/css/style.css
@@ -42,6 +42,15 @@ body {
   color: #102746;
 }
 
+img {
+  width: 100%;
+  height: auto;
+}
+
+a {
+  text-decoration: none;
+}
+
 .wrapper {
   max-width: 1060px;
   margin: 0 auto;
@@ -80,7 +89,7 @@ body {
   font-size: 18px;
   font-weight: 24px;
   color: white;
-  text-decoration: none;
+  /*text-decoration: none;*/
 }
 
 .header__link:hover,
@@ -97,6 +106,7 @@ body {
   background: url(../img/intro-bg.jpg) no-repeat center;
   background-size: cover;
   padding-top: 263px;
+  padding-bottom: 223px;
 }
 
 .intro__title {
@@ -130,6 +140,7 @@ body {
   border: 0;
   border-bottom: 2px solid white;
   margin-right: 60px;
+  padding-left: 43px;
   padding-bottom: 22px;
   font-weight: 500;
   font-size: 18px;
@@ -155,7 +166,82 @@ body {
 .search-form__submit:hover,
 .search-form__submit:focus,
 .search-form__submit:active {
-  background-color: #116fea;
-
+  background: #116fea;
 }
 /* Intro styles end */
+
+/* Benefits styles start */
+.benefits {
+  margin-bottom: 131px;
+}
+
+.benefits__wrap {
+  max-width: 1262px;
+  background-color: white;
+  margin: 0 auto;
+  box-shadow: 0px 2px 20px rgba(21, 24, 36, 0.15993);
+  position: relative;
+}
+
+.benefits__title {
+  width: 100%;
+  font-weight: 500;
+  font-size: 35px;
+  line-height: 42px;
+  padding: 93px 100px 88px 100px;
+  position: absolute;
+  top: 0;
+  left: 0;
+  transform: translateY(-100%);
+  background-color: white;
+}
+
+.benefits__cards {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-column-gap: 55px;
+  padding: 0 100px;
+}
+
+.benefits__card {
+  grid-column: span 1;
+  margin-bottom: 112px;
+}
+
+.benefits__card-pic {
+  max-width: 66px;
+  margin-bottom: 37px;
+}
+
+.benefits__card-thumb {
+  display: block;
+}
+
+.benefits__card-title {
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 24px;
+  margin-bottom: 26px;
+}
+
+.benefits__card-desc {
+  font-size: 16px;
+  line-height: 24px;
+  margin-bottom: 39px;
+}
+
+.benefits__card-more {
+  display: inline-block;
+  padding-right: 59px;
+  font-size: 16px;
+  line-height: 24px;
+  color: #006dfe;
+  background: url(../img/svg/arrow-right.svg) no-repeat 95% center;
+  transition: .2s all; 
+}
+
+.benefits__card-more:hover,
+.benefits__card-more:focus {
+ background: url(../img/svg/arrow-right.svg) no-repeat right center; 
+}
+/* Benefits styles end */
